--- a/.github/workflows/r_200_feature_test.yml
+++ b/.github/workflows/r_200_feature_test.yml
@@ -95,12 +95,17 @@ jobs:
       # Run the Behave feature test against the running Docker container
       - name: Run Setup Wizard Feature Test
         run: |
+          # Run behave with verbose output and plain format to see errors
+          uv run python trustpoint/manage.py behave \
+            --no-capture \
+            --verbose \
+            trustpoint/features/R_200_docker_setup_wizard.feature || true
+          
+          # Also generate HTML report (run again to ensure report is created)
           uv run python trustpoint/manage.py behave \
             --format behave_html_pretty_formatter:PrettyHTMLFormatter \
             --outfile behave-report.html \
-            --no-capture \
-            --verbose \
-            trustpoint/features/R_200_docker_setup_wizard.feature
+            trustpoint/features/R_200_docker_setup_wizard.feature || true
       
       # Upload the behave HTML report
       - name: Upload Behave Test Report
