--- a/.github/workflows/r_200_feature_test.yml
+++ b/.github/workflows/r_200_feature_test.yml
@@ -85,10 +85,11 @@ jobs:
       
       # Run the Behave feature test against the running Docker container
       - name: Run Setup Wizard Feature Test
-        env:
-          DJANGO_SETTINGS_MODULE: trustpoint.settings
-          PYTHONPATH: ${{ github.workspace }}
         run: |
+          # Set Django settings module and Python path
+          export DJANGO_SETTINGS_MODULE=trustpoint.settings
+          export PYTHONPATH="${PYTHONPATH}:${PWD}"
+          
           # Run behave directly (not through Django) to test against Docker container
           uv run behave \
             --no-capture \
