--- a/.github/workflows/r_200_feature_test.yml
+++ b/.github/workflows/r_200_feature_test.yml
@@ -95,17 +95,18 @@ jobs:
       - name: Run Setup Wizard Feature Test
         run: |
           # Run behave directly (not through Django) to test against Docker container
-          # Set PYTHONPATH to include workspace root so trustpoint.settings can be imported
+          # Set PYTHONPATH and run from workspace root to ensure imports work correctly
+          cd ${{ github.workspace }}
           export PYTHONPATH="${{ github.workspace }}"
           export DJANGO_SETTINGS_MODULE=trustpoint.settings
           
-          uv run behave \
+          uv run python -m behave \
             --no-capture \
             --verbose \
             trustpoint/features/R_200_docker_setup_wizard.feature || true
           
           # Also generate HTML report (run again to ensure report is created)
-          uv run behave \
+          uv run python -m behave \
             --format behave_html_pretty_formatter:PrettyHTMLFormatter \
             --outfile behave-report.html \
             trustpoint/features/R_200_docker_setup_wizard.feature || true
