--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "django-taggit>=6.1.0,<7",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
-    "drf-yasg>=1.21.11",
+    "drf-spectacular>=0.29.0",
     "furo>=2024.8.6",
     "packaging>=25.0",
     "paramiko>=3.5.1",
