--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "trustpoint-core==0.3.0",
     "types-paramiko>=3.5.0.20250516",
     "zeroconf>=0.148,<0.149",
-    "opcua==0.98.13"
+    "asyncua>=1.1.5"
 ]
 
 [dependency-groups]
