--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "crispy-bootstrap5~=2025.4",
     "cryptography>=46.0.1",
     "django>=5.2.6",
+    "django-behave>=0.1.6",
     "django-crispy-forms~=2.3",
     "django-dbbackup>=5.0.0",
     "django-filter~=25.1",
