--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "behave-html-pretty-formatter>=1.14.1",
     "allure-behave>=2.14.3",
     "allure-pytest>=2.14.3",
+    "pytest-asyncio>=1.3.0",
 ]
 # For building docs
 docs = [
