Fixing: Actions job or workflow does not limit the permissions of the GITHUB_TOKEN. Consider setting an explicit permissions block, using the following as a minimal starting point: {contents: read}

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   mypy:
     runs-on: ubuntu-latest # Use the latest Ubuntu runner for compatibility and performance.
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6  # Ensures the repository code is available.
