--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   sbom:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
     - name: Checkout Trustpoint repo
