--- a/.github/workflows/backup-restore.yml
+++ b/.github/workflows/backup-restore.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   backup-and-restore:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
 
     steps:
       - name: Install gettext tools
