--- a/.github/workflows/behave-test-template.yml
+++ b/.github/workflows/behave-test-template.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   behave:
     runs-on: ubuntu-latest  # Use the latest Ubuntu runner for compatibility and performance.
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6  # Ensures the repository code is available.
