--- a/.github/workflows/codecov-upload.yml
+++ b/.github/workflows/codecov-upload.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   codecov-upload:
     runs-on: ubuntu-latest # Use the latest Ubuntu runner for compatibility and performance.
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6  # Ensures the repository code is available.
