--- a/.github/workflows/comprehensive_test_report.yml
+++ b/.github/workflows/comprehensive_test_report.yml
@@ -10,6 +10,8 @@ jobs:
 
   generate-unit-test-results:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6
@@ -36,6 +38,8 @@ jobs:
 
   generate-bdd-test-results:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6
@@ -65,6 +69,8 @@ jobs:
       - generate-unit-test-results
       - generate-bdd-test-results
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v6
