--- a/.github/workflows/main-ci-cd.yml
+++ b/.github/workflows/main-ci-cd.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     if: contains(github.event.head_commit.message, 'build:')
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read
 
     steps:
     - uses: actions/checkout@v6
