--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "argon2-cffi>=25.1.0",
     "crispy-bootstrap5~=2025.4",
     "cryptography>=46.0.1",
-    "django>=5.2.6",
+    "django>=6.0.2,<7",
     "django-behave>=0.1.6",
     "django-crispy-forms~=2.3",
     "django-dbbackup>=5.0.0",
