--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ dependencies = [
     "trustpoint-core==0.3.0",
     "types-paramiko>=3.5.0.20250516",
     "zeroconf>=0.148,<0.149",
-    "asyncua>=1.1.5"
+    "asyncua>=1.1.5",
+    "django-q2>=1.9.0",
 ]
 
 [dependency-groups]
